[package]
name = "csvquery"
version = "0.3.1"
authors = ["VictorBulba <bulba@asclet.com>"]
edition = "2018"
license = "MIT"
repository = "https://github.com/VictorBulba/csvquery"
description = "Engine for making key-value queries in csv file"
readme = "README.md"
keywords = ["csv", "database"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1"
serde = "1"